[package]
name = "redis-clone-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.15", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
